--- a/index.html
+++ b/index.html
@@ -34,72 +34,72 @@
     </tr>
   </table>
   <h2 id="pb">1. Purple Bitch</h2>
-  <img src="/img/pb1.jpg" alt="Purple Bitch: Hinata Cosplay" style="height: 500px;">
-  <img src="/img/pb2.jpg" alt="Purple Bitch: Nami Cosplay" style="height: 500px;">
-  <img src="/img/pb3.jpg" alt="Purple Bitch: Miku Cosplay" style="height: 500px;">
+  <img src="/pb1.jpg" alt="Purple Bitch: Hinata Cosplay" style="height: 500px;">
+  <img src="/pb2.jpg" alt="Purple Bitch: Nami Cosplay" style="height: 500px;">
+  <img src="/pb3.jpg" alt="Purple Bitch: Miku Cosplay" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/purple-bitch">https://www.pornhub.com/model/purple-btich</a></span>
   <br><br><br>
   <h2 id="sf">2. Sweetie Fox</h2>
-  <img src="/img/sf1.jpg" alt="Sweetie Fox: Pomni Cosplay" style="height: 500px;">
-  <img src="/img/sf2.jpg" alt="Sweetie Fox: 2B Cosplay" style="height: 500px;">
-  <img src="/img/sf3.jpg" alt="Sweetie Fox: Ada Wong Cosplay" style="height: 500px;">
+  <img src="/sf1.jpg" alt="Sweetie Fox: Pomni Cosplay" style="height: 500px;">
+  <img src="/sf2.jpg" alt="Sweetie Fox: 2B Cosplay" style="height: 500px;">
+  <img src="/sf3.jpg" alt="Sweetie Fox: Ada Wong Cosplay" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/sweetie-fox">https://www.pornhub.com/model/sweetie-fox</a></span>
   <br><br><br>
   <h2 id="ss">3. Sia Siberia</h2>
-  <img src="/img/ss1.jpg" alt="Sia Siberia: Sakura Cosplay" style="height: 500px;">
-  <img src="/img/ss2.jpg" alt="Sia Siberia: Power Cosplay" style="height: 500px;">
-  <img src="/img/ss3.jpg" alt="Sia Siberia: Jinx Cosplay" style="height: 500px;">
+  <img src="/ss1.jpg" alt="Sia Siberia: Sakura Cosplay" style="height: 500px;">
+  <img src="/ss2.jpg" alt="Sia Siberia: Power Cosplay" style="height: 500px;">
+  <img src="/ss3.jpg" alt="Sia Siberia: Jinx Cosplay" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/siasiberia">https://www.pornhub.com/model/siasiberia</a></span>
   <br><br><br>
   <h2 id="mb">4. Miss Banana</h2>
-  <img src="/img/mb1.jpg" style="height: 500px;">
-  <img src="/img/mb2.jpg" style="height: 500px;">
-  <img src="/img/mb3.jpg" style="height: 500px;">
+  <img src="/mb1.jpg" style="height: 500px;">
+  <img src="/mb2.jpg" style="height: 500px;">
+  <img src="/mb3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/pornstar/miss-banana">https://www.pornhub.com/model/miss-banana</a></span>
   <br><br><br>
   <h2 id="zr">5. Zirael Rem</h2>
-  <img src="/img/zr1.jpg" style="height: 500px;">
-  <img src="/img/zr2.jpg" style="height: 500px;">
-  <img src="/img/zr3.jpg" style="height: 500px;">
+  <img src="/zr1.jpg" style="height: 500px;">
+  <img src="/zr2.jpg" style="height: 500px;">
+  <img src="/zr3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/zirael_rem">https://www.pornhub.com/model/zirael_rem</a></span>
   <br><br><br>
   <h2 id="er">6. Emanuelly Raquel</h2>
-  <img src="/img/er1.jpg" style="height: 500px;">
-  <img src="/img/er2.jpg" style="height: 500px;">
-  <img src="/img/er3.jpg" style="height: 500px;">
+  <img src="/er1.jpg" style="height: 500px;">
+  <img src="/er2.jpg" style="height: 500px;">
+  <img src="/er3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/pornstar/emanuelly-raquel">https://www.pornhub.com/model/emanuelly-raquel</a></span>
   <br><br><br>
   <h2 id="mrw">7. MollyRedWolf</h2>
-  <img src="/img/mrw1.jpg" style="height: 500px;">
-  <img src="/img/mrw2.jpg" style="height: 500px;">
-  <img src="/img/mrw3.jpg" style="height: 500px;">
+  <img src="/mrw1.jpg" style="height: 500px;">
+  <img src="/mrw2.jpg" style="height: 500px;">
+  <img src="/mrw3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/mollyredwolf">https://www.pornhub.com/model/mollyredwolf</a></span>
   <br><br><br>
   <h2 id="ca">8. Cherry Acid</h2>
-  <img src="/img/ca1.jpg" style="height: 500px;">
-  <img src="/img/ca2.jpg" style="height: 500px;">
-  <img src="/img/ca3.jpg" style="height: 500px;">
+  <img src="/ca1.jpg" style="height: 500px;">
+  <img src="/ca2.jpg" style="height: 500px;">
+  <img src="/ca3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/cherry-acid">https://www.pornhub.com/model/cherry-acid</a></span>
   <br><br><br>
   <h2 id="mkd">9. MyKinkyDope</h2>
-  <img src="/img/mkd1.jpg" style="height: 500px;">
-  <img src="/img/mkd2.jpg" style="height: 500px;">
-  <img src="/img/mkd3.jpg" style="height: 500px;">
+  <img src="/mkd1.jpg" style="height: 500px;">
+  <img src="/mkd2.jpg" style="height: 500px;">
+  <img src="/mkd3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/pornstar/mykinkydope">https://www.pornhub.com/model/mykinkydope</a></span>
   <br><br><br>
   <h2 id="bd">10. Belle Delphine</h2>
-  <img src="/img/bd1.jpg" style="height: 500px;">
-  <img src="/img/bd2.jpg" style="height: 500px;">
-  <img src="/img/bd3.jpg" style="height: 500px;">
+  <img src="/bd1.jpg" style="height: 500px;">
+  <img src="/bd2.jpg" style="height: 500px;">
+  <img src="/bd3.jpg" style="height: 500px;">
   <br><br><br>
   <span class="pb1">See her Pornhub</span><span class="pb2">-</span><span class="pb3"><a href="https://www.pornhub.com/model/belle-delphine">https://www.pornhub.com/model/belle-delphine</a></span>
   <br><br><br>
